tests/baselines/reference/asyncGenerators.functionDeclaration.10.es6.errors.txt
tests/cases/conformance/asyncGenerators/es6/functionDeclarations/asyncGenerators.functionDeclaration.10.es6.ts(2,22): error TS1003: Identifier expected.
tests/cases/conformance/asyncGenerators/es6/functionDeclarations/asyncGenerators.functionDeclaration.10.es6.ts(2,28): error TS1109: Expression expected.
tests/cases/conformance/asyncGenerators/es6/functionDeclarations/asyncGenerators.functionDeclaration.10.es6.ts(2,30): error TS1005: ';' expected.


==== tests/cases/conformance/asyncGenerators/es6/functionDeclarations/asyncGenerators.functionDeclaration.10.es6.ts (3 errors) ====
    async function * f() {
        async function * await() {
                         ~~~~~
!!! error TS1003: Identifier expected.
                               ~
!!! error TS1109: Expression expected.
                                 ~
!!! error TS1005: ';' expected.
        }
    }